[gd_scene load_steps=39 format=3 uid="uid://bjavspsika77h"]

[ext_resource type="Script" path="res://3 - real_new_project/tutorial.gd" id="1_37c2h"]
[ext_resource type="Texture2D" uid="uid://blfh44gdxwmtq" path="res://assets/Tutorial/演示动画 (1).png" id="1_t5jke"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r4qn5"]
atlas = ExtResource("1_t5jke")
region = Rect2(0, 129, 205, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_uktdh"]
atlas = ExtResource("1_t5jke")
region = Rect2(205, 129, 205, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_udir6"]
atlas = ExtResource("1_t5jke")
region = Rect2(410, 129, 205, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae2fk"]
atlas = ExtResource("1_t5jke")
region = Rect2(615, 129, 205, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nkfi"]
atlas = ExtResource("1_t5jke")
region = Rect2(820, 129, 205, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_ka3sv"]
atlas = ExtResource("1_t5jke")
region = Rect2(1025, 129, 205, 129)

[sub_resource type="SpriteFrames" id="SpriteFrames_0qdva"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4qn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uktdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udir6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae2fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nkfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ka3sv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_48ciu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ayg5o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5weyf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ckj0l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_npuns"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s4q6o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s6bcr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6y03k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xnix7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f8l2l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8tjax"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4twrl"]
atlas = ExtResource("1_t5jke")
region = Rect2(0, 0, 205, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rtix"]
atlas = ExtResource("1_t5jke")
region = Rect2(205, 0, 205, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_durog"]
atlas = ExtResource("1_t5jke")
region = Rect2(410, 0, 205, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjoki"]
atlas = ExtResource("1_t5jke")
region = Rect2(615, 0, 205, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqout"]
atlas = ExtResource("1_t5jke")
region = Rect2(820, 0, 205, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oo2m"]
atlas = ExtResource("1_t5jke")
region = Rect2(1025, 0, 205, 129)

[sub_resource type="SpriteFrames" id="SpriteFrames_as570"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4twrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rtix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_durog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjoki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqout")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oo2m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_igsl4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x31bj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fe4rf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vx2hv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2vc34"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vdiym"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6wtji"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u6q44"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cjwej"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vv0px"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0uf06"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37c2h")

[node name="StartPanel_2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -144.0
offset_right = 256.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="StartPanel_2"]
position = Vector2(262.913, 132)
scale = Vector2(3.28682, 3.28682)
sprite_frames = SubResource("SpriteFrames_0qdva")
autoplay = "default"

[node name="Label" type="Label" parent="StartPanel_2"]
offset_left = -24.0012
offset_top = 24.0002
offset_right = 183.999
offset_bottom = 83.0002
theme_override_colors/font_color = Color(0.273873, 0.273873, 0.273873, 1)
theme_override_font_sizes/font_size = 24
text = "拖动长按信息，
将信息分配给下属"

[node name="StartGameBtn_2" type="Button" parent="StartPanel_2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.001
offset_top = 32.0002
offset_right = 147.999
offset_bottom = 60.0002
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0.677301, 0.604786, 0.619661, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_48ciu")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ayg5o")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5weyf")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ckj0l")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_npuns")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_s4q6o")
theme_override_styles/hover = SubResource("StyleBoxEmpty_s6bcr")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_6y03k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xnix7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_f8l2l")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8tjax")
text = "开启一周的社畜生活！"

[node name="StartPanel_1" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -144.0
offset_right = 256.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="StartPanel_1"]
position = Vector2(262.628, 156.172)
scale = Vector2(3.29142, 3.29142)
sprite_frames = SubResource("SpriteFrames_as570")
autoplay = "default"

[node name="NextPage" type="Button" parent="StartPanel_1/AnimatedSprite2D"]
offset_left = 77.0
offset_top = 35.0
offset_right = 94.0
offset_bottom = 52.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_igsl4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_x31bj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_fe4rf")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_vx2hv")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_2vc34")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_vdiym")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6wtji")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_u6q44")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cjwej")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vv0px")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0uf06")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="StartPanel_1"]
offset_left = 199.999
offset_top = 80.0002
offset_right = 407.999
offset_bottom = 139.0
theme_override_colors/font_color = Color(0.273873, 0.273873, 0.273873, 1)
theme_override_font_sizes/font_size = 24
text = "点击消除短信息"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="StartPanel_1"]
offset_left = 215.999
offset_top = 160.0
offset_right = 527.999
offset_bottom = 219.0
theme_override_colors/font_color = Color(0.273873, 0.273873, 0.273873, 1)
theme_override_font_sizes/font_size = 24
text = "长按消除长信息，
但是会加快时间流逝的速度"
vertical_alignment = 1

[connection signal="pressed" from="StartPanel_2/StartGameBtn_2" to="." method="_on_start_game_btn_2_pressed"]
[connection signal="pressed" from="StartPanel_1/AnimatedSprite2D/NextPage" to="." method="_on_next_page_pressed"]
